log/build_2025-05-28_22-49-42/pi_controller/stderr.log
/home/cam/projects/CubeRover/venv/lib/python3.12/site-packages/setuptools/_distutils/dist.py:289: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/home/cam/projects/CubeRover/install/pi_controller/lib/python3.12/site-packages/pi_controller/python_serial_teensy.py", line 34
    val = self.link.rx_obj(obj_type='f', start_pos=index))
                                                         ^
SyntaxError: unmatched ')'

